...
                myEvents = store.getGroupEventsOfUserByDate(email).await().reversed() // To have the oldest last
                stateUpdated.complete(null)
            }

            data class TabItem(
                val title: String,
                val tag: String
            )
            val tabs = listOf(
                TabItem("ALL", ALL),
                TabItem("MY EVENTS", MY_EVENTS)
            )
            var selectedTabIndex by remember { mutableStateOf(0) }
...
